Test: Verify secrets encryption -Refactoring documentation -Fix wrong cluster name in secrets encrypted specs -Change task name to verify_secrets_encryption -Add exception handling to scan_namespace and remove unnecessary function arguments

--- a/embedded_files/points.yml
+++ b/embedded_files/points.yml
@@ -359,6 +359,10 @@
   emoji: "🔓🔑"
   tags: ["platform", "platform:security", "dynamic"]
 
+- name: verify_secrets_encryption
+  emoji: "🔓🔑"
+  tags: ["platform", "platform:security", "dynamic"]
+
 - name: external_ips
   emoji: "🔓🔑"
   tags: [security, dynamic, workload, normal]
