Add deprecated K8s features test
Test if CNF deployment (be it helm or manifests based) contains any
deprecated features. Check is performed by collecting stderr from
'helm install' and 'kubectl apply' commands. These have the latest and
most reliable info regarding deprecations. 3rd-party tools like 'kubent'
or 'pluto' were not succesful in discovering all deprecations and would
add another dependency to long list of already maintained.

- Add deprecation test
- Add spec for test checking all 3 possible outcomes
- Add error handling to manifest_deployment_manager.install()
- Add stderr collection to logfile in deployment_managers
- Update exceptions raised in helm module
- Run autoformatter on compatibility_spec.cr
- Update kind in GH actions to latest v0.27.0 which uses k8s 1.32.0

Signed-off-by: Rafal Lal <rafal.lal@tietoevry.com>

--- a/embedded_files/points.yml
+++ b/embedded_files/points.yml
@@ -146,6 +146,8 @@
   tags: [compatibility, dynamic, workload]
 - name: rollback
   tags: [compatibility, dynamic, workload, normal]
+- name: deprecated_k8s_features
+  tags: [compatibility, dynamic, workload]
 - name: nodeport_not_used
   tags: [configuration, dynamic, workload, normal]
 - name: hostport_not_used
