make containerd and crio sockets dynamically discovered
Signed-off-by: Martin Matyas <martin.matyas@tietoevry.com>

--- a/src/modules/cluster_tools/tools/Dockerfile
+++ b/src/modules/cluster_tools/tools/Dockerfile
@@ -31,7 +31,7 @@ COPY ./zombie /zombie
 
 COPY --from=wireshark_build /usr/local /usr/local
 COPY --from=validator /validator/bin/openmetricsvalidator /usr/local/bin/
-RUN apt update && apt install -y curl sysbench skopeo net-tools strace libpcap-dev libssl-dev libc-ares-dev libqt5printsupport5
+RUN apt update && apt install -y curl sysbench skopeo net-tools strace libpcap-dev libssl-dev libc-ares-dev libqt5printsupport5 lsof
 
 RUN curl -L https://github.com/kubernetes-sigs/cri-tools/releases/download/${CRI_VERSION}/crictl-${CRI_VERSION}-linux-amd64.tar.gz --output crictl-${CRI_VERSION}-linux-amd64.tar.gz && \
     tar zxvf crictl-$CRI_VERSION-linux-amd64.tar.gz -C /usr/local/bin && \
