--- a/sample-cnfs/ndn-reasonable-image-size/gateway-helm/Chart.yaml
+++ b/sample-cnfs/ndn-reasonable-image-size/gateway-helm/Chart.yaml
@@ -1,20 +1,25 @@
 apiVersion: v2
-appVersion: latest
-description: The Helm chart for Envoy Gateway
-home: https://gateway.envoyproxy.io/
-icon: https://raw.githubusercontent.com/envoyproxy/gateway/main/site/assets/icons/logo.svg
-keywords:
-- gateway-api
-- envoyproxy
-- envoy-gateway
-- eg
-maintainers:
-- name: envoy-gateway-steering-committee
-  url: https://github.com/envoyproxy/gateway/blob/main/GOVERNANCE.md
-- name: envoy-gateway-maintainers
-  url: https://github.com/envoyproxy/gateway/blob/main/CODEOWNERS
 name: gateway-helm
-sources:
-- https://github.com/envoyproxy/gateway
+description: The Helm chart for Envoy Gateway
 type: application
+
 version: v0.0.0-latest
+appVersion: "latest"
+icon: https://raw.githubusercontent.com/envoyproxy/gateway/main/site/assets/icons/logo.svg
+
+maintainers:
+  - name: envoy-gateway-steering-committee
+    url: https://github.com/envoyproxy/gateway/blob/main/GOVERNANCE.md
+  - name: envoy-gateway-maintainers
+    url: https://github.com/envoyproxy/gateway/blob/main/CODEOWNERS
+
+keywords:
+  - gateway-api
+  - envoyproxy
+  - envoy-gateway
+  - eg
+
+home: https://gateway.envoyproxy.io/
+
+sources:
+  - https://github.com/envoyproxy/gateway
