--- a/sample-cnfs/ndn-reasonable-image-size/gateway-helm/templates/certgen.yaml
+++ b/sample-cnfs/ndn-reasonable-image-size/gateway-helm/templates/certgen.yaml
@@ -20,9 +20,21 @@ spec:
         app: certgen
     spec:
       containers:
+      {{- $args := .Values.certgen.job.args }}
+      {{- if not .Values.topologyInjector.enabled }}
+        {{- $args = append $args "--disable-topology-injector" }}
+      {{- end }}
+      {{- if $args }}
+      - args:
+        {{- toYaml $args | nindent 8 }}
+        command:
+        - envoy-gateway
+        - certgen
+      {{- else }}
       - command:
         - envoy-gateway
         - certgen
+      {{- end }}
         env:
         - name: ENVOY_GATEWAY_NAMESPACE
           valueFrom:
@@ -39,18 +51,20 @@ spec:
           {{- toYaml . | nindent 10 }}
         {{- end }}
         securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-            - ALL
-          privileged: false
-          readOnlyRootFilesystem: true
-          runAsNonRoot: true
-          runAsGroup: 65534
-          runAsUser: 65534
-          seccompProfile:
-            type: RuntimeDefault
+          {{- toYaml .Values.certgen.job.securityContext | nindent 10 }}
       {{- include "eg.image.pullSecrets" . | nindent 6 }}
+      {{- with .Values.certgen.job.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.certgen.job.nodeSelector }}
+      nodeSelector:
+        {{ toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.certgen.job.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 6 }}
+      {{- end }}
       restartPolicy: Never
       serviceAccountName: {{ include "eg.fullname" . }}-certgen
   {{- if not ( kindIs "invalid" .Values.certgen.job.ttlSecondsAfterFinished) }}
