--- a/sample-cnfs/ndn-reasonable-image-size/gateway-helm/templates/infra-manager-rbac.yaml
+++ b/sample-cnfs/ndn-reasonable-image-size/gateway-helm/templates/infra-manager-rbac.yaml
@@ -1,3 +1,34 @@
+{{ if .Values.config.envoyGateway.provider.kubernetes }}
+{{ $kube := .Values.config.envoyGateway.provider.kubernetes }}
+{{ if and (not $kube.watch) ($kube.deploy) (eq $kube.deploy.type "GatewayNamespace") }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "eg.fullname" $ }}-cluster-infra-manager
+  labels:
+  {{- include "eg.labels" $ | nindent 4 }}
+rules:
+{{ include "eg.rbac.infra.basic" . }}
+{{ include "eg.rbac.infra.tokenreview" . }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "eg.fullname" $ }}-cluster-infra-manager
+  labels:
+  {{- include "eg.labels" $ | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: '{{ include "eg.fullname" $ }}-cluster-infra-manager'
+subjects:
+- kind: ServiceAccount
+  name: 'envoy-gateway'
+  namespace: '{{ $.Release.Namespace }}'
+---
+{{ end }}
+{{ end }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -6,37 +37,7 @@ metadata:
   labels:
   {{- include "eg.labels" . | nindent 4 }}
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - serviceaccounts
-  - services
-  verbs:
-  - create
-  - get
-  - delete
-  - patch
-- apiGroups:
-  - apps
-  resources:
-  - deployments
-  - daemonsets
-  verbs:
-  - create
-  - get
-  - delete
-  - patch
-- apiGroups:
-  - autoscaling
-  - policy
-  resources:
-  - horizontalpodautoscalers
-  - poddisruptionbudgets
-  verbs:
-  - create
-  - get
-  - delete
-  - patch
+{{ include "eg.rbac.infra.basic" . }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
