--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-/tools/ @denverwilliams @wavell @hashnuke @agentpoyo
-/src/ @denverwilliams @wavell @agentpoyo
-/specs/ @denverwilliams @wavell @agentpoyo
+/tools/ @martin-mat @collivier @rich-l @smitholi67
+/src/ @martin-mat @collivier @rich-l @smitholi67
+/specs/ @martin-mat @collivier @rich-l @smitholi67
