--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,1 @@
-/tools/ @martin-mat @collivier @rich-l @smitholi67
-/src/ @martin-mat @collivier @rich-l @smitholi67
-/specs/ @martin-mat @collivier @rich-l @smitholi67
+/ @martin-mat @collivier @rich-l @smitholi67
