Task hardcoded_ip_adresses_in_k8s_runtime_configuration doesnt flag network adress as hardcoded adress
Signed-off-by: Lucia Sirova <lucia.sirova@tietoevry.com>

Add methods for checking whether ip adress and mask is valid

Signed-off-by: Lucia Sirova <lucia.sirova@tietoevry.com>

Add adding allowed ip adresses via config

Signed-off-by: Lucia Sirova <lucia.sirova@tietoevry.com>

--- a/sample-cnfs/sample_coredns/chart/values.yaml
+++ b/sample-cnfs/sample_coredns/chart/values.yaml
@@ -32,6 +32,7 @@ service:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9153"
+    hardcodedIpTest: "8.8.8.8 4.4.4.4"
 
 serviceAccount:
   create: false
