Task hardcoded_ip_adresses_in_k8s_runtime_configuration doesnt flag network adress as hardcoded adress
Signed-off-by: Lucia Sirova <lucia.sirova@tietoevry.com>

Add methods for checking whether ip adress and mask is valid

Signed-off-by: Lucia Sirova <lucia.sirova@tietoevry.com>

--- a/sample-cnfs/sample_coredns/chart/values.yaml
+++ b/sample-cnfs/sample_coredns/chart/values.yaml
@@ -196,3 +196,5 @@ autoscaler:
     ## Annotations for the coredns-autoscaler configmap
     # i.e. strategy.spinnaker.io/versioned: "false" to ensure configmap isn't renamed
     annotations: {}
+
+testNetworkCIDR: "1.1.1.0/24"
