Feat: Introduce oci and private helm repository support Refs: #2277 - Added support for oci repositories in cnf config (through fields   outlined in documentation) and private helm repositories (requiring   auth). - Introduced authentication and certificate support in cnf config   through `auth_defaults` and override `auth` field. - Added ENV expansion to cnf config (jinja templates) - provided through   the crinja shard. - Three new tests added to verify functionality (oci pull, private helm   repo pull and certificate authentification) - tests utilize containers   as repos. - Documentation update for new cnf config.
Signed-off-by: svteb <slavo.valko@tietoevry.com>

--- a/shard.yml
+++ b/shard.yml
@@ -13,6 +13,8 @@ targets:
 crystal: '>= 1.6.0'
 
 dependencies:
+  crinja:
+    github: straight-shoota/crinja
   sam:
     github: vulk/sam.cr
     commit: 4e3b271d31d7
